# atheris-api

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  nginx.conf  pyproject.toml
atheris_api/: main.py
atheris_api/modules/: __init__.py
atheris_api/modules/file/models/: __init__.py  file.py
atheris_api/modules/file/routes/: __init__.py  file.py
atheris_api/modules/file/schemas/: file.py
atheris_api/modules/file/services/: file.py
atheris_api/modules/file/utils/: file.py
atheris_api/modules/home/models/: __init__.py  home.py  rating.py
atheris_api/modules/home/routes/: __init__.py  home.py  rating.py
atheris_api/modules/home/schemas/: home.py  rating.py
atheris_api/modules/home/services/: home.py  rating.py
atheris_api/modules/product/models/: __init__.py  product.py
atheris_api/modules/product/routes/: __init__.py  product.py
atheris_api/modules/product/schemas/: product.py
atheris_api/modules/product/services/: product.py
atheris_api/utils/: paginate.py  regex.py  start_module.py
config/: base_settings.py  beanie.py
